<resources>
    <string name="app_name">SPF</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Eliminar</string>
    <string name="import_btn">Importar</string>
    <string name="action_selectAll">Seleccionar todos</string>
    <string name="action_cancelSelectAll">Cancelar selección</string>
    <string name="action_directory">Directorios</string>
    <string name="action_newCategory">Añadir categoria</string>
    <string name="action_newDirectory">Añadir directorio</string>
    <string name="action_deleteDirectoy">Eliminar directorio</string>
    <string name="action_deleteCategory">Eliminar categoria</string>
    <string name="action_deleteMaterial">Eliminar material</string>
    <string name="action_undo">Deshacer</string>
    <string name="action_redo">Reshacer</string>
    <string name="action_close">Cerrar</string>
    <string name="action_refresh">Actualizar</string>
    <string name="action_collapse_title">Colapsar Titulos</string>
    <string name="action_expand_title">Expandir Titulos</string>
    <string name="action_editDirectory">Editar directorios</string>
    <string name="action_editMaterial">Editar materiales</string>
    <string name="action_changeImage">Cambiar imagen</string>
    <string name="action_changeCategory">Cambiar de categoria</string>
    <string name="action_sort">Ordenar</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_sortType"> por Tipo</string>
    <string name="action_sortDealer"> por Proveedores</string>
    <string name="action_sortAll">Todos</string>
    <string name="action_sortAlphabetical">por Nombre</string>
    <string name="action_sortDate">por Fecha</string>
    <string name="action_sortDirectory">por Directorio</string>
    <string name="action_sortCustumer">por Cliente</string>
    <string name="action_sortSeasons"> por Temporada</string>
    <string name="action_sortState">por Estado</string>
    <string name="action_sortModel">por Modelo</string>
    <string name="action_sortPosition">por Nº Nota</string>
    <string name="action_sortSize">por Talla</string>
    <string name="action_sortPairCount">por Pares</string>
    <string name="action_sortCutNoteListReference">por Referencia</string>
    <string name="action_custumers">Clientes</string>
    <string name="action_editDealership">Editar proveedor</string>
    <string name="action_moveTo">Mover a:</string>
    <string name="action_complements">Complementos</string>
    <string name="action_DuplicateCategory">Esta categoria ya existe</string>
    <string name="action_newModel">Crear Modelo</string>
    <string name="action_editModel">Editar modelo</string>
    <string name="action_editModelName">Renombrar</string>
    <string name="action_removeModel">Eliminar modelo</string>
    <string name="action_setting">Opciones</string>
    <string name="action_add">Añadir</string>
    <string name="action_edit">Editar</string>
    <string name="action_search">Buscar</string>
    <string name="action_searchParameter">Buscar en</string>
    <string name="action_viewMode">Cambiar vista</string>
    <string name="action_send">Enviar</string>
    <string name="action_select">Seleccionar</string>
    <string name="action_save_as">Guardar como...</string>
    <string name="action_save_as_image">Imagen</string>
    <string name="action_save_as_cut_file">Archivo de corte</string>
    <string name="action_fast_access">Acceso Rápido</string>
    <string name="action_print">Imprimir</string>
    <string name="action_share">Compartir</string>
    <string name="action_customMaterial">Asociar Material</string>
    <string name="action_delete_customMaterial">Eliminar asociación</string>
    <string name="model_addNewModel">Añadir Modelo</string>
    <string name="action_addImage">Añadir Imagen</string>
    <string name="action_newDealership">Añadir proveedor</string>
    <string name="action_addCustomMaterial">Añadir Material</string>
    <string name="action_addpiece">Añadir Pieza</string>
    <string name="action_addWorker">Añadir Trabajador</string>
    <string name="dialog_saved_sucessfully">Guardado</string>
    <string name="dialog_saved_unsucessfully">Problema al guardar</string>
    <string name="dialogMsg_save">"¿Guardar cambios?"</string>
    <string name="dialog_searchFiles">Buscando archivos...</string>
    <string name="dialog_loadModel">Cargando datos</string>
    <string name="dialog_updateData">Actualizando...</string>
    <string name="dialog_not_editable_value">No Editable</string>
    <string name="dialog_selection_value">Seleccionar un Valor</string>
    <string name="dialog_selectImage">Selecciona una imagen</string>
    <string name="dialog_save">GUARDAR</string>
    <string name="dialog_cancel">"CANCELAR"</string>
    <string name="dialog_undo">"DESHACER"</string>
    <string name="dialog_ok">"ACEPTAR"</string>
    <string name="dialogTitle_remove">"¿Eliminar?"</string>
    <string name="dialog_remove">"ELIMINAR"</string>
    <string name="dialogMsg_remove">"Una vez elimando no se podrá recuperar"</string>
    <string name="directory">  Directorios</string>
    <string name="model_custumer">Cliente</string>
    <string name="model">Modelo</string>
    <string name="emptyHeader">Vacio</string>
    <string name="piece_edit">Editar pieza</string>
    <string name="piece_Name">Nombre</string>
    <string name="piece_Amount">Piezas</string>
    <string name="piece_SizeList">Tallaje</string>
    <string name="piece_Size">Talla</string>
    <string name="piece_BaseSize">Talla Base</string>
    <string name="piece_Left">Izquierdo</string>
    <string name="piece_Right">Derecho</string>
    <string name="piece_Material">Material</string>
    <string name="piece_changeMaterial">Mover</string>
    <string name="piece_selection">Selecciona una pieza</string>
    <string name="piece_Tool">Herramientas</string>
    <string name="piece_AmountMaterial">Consumo</string>
    <string name="piece_view">"Vista previa"</string>
    <string name="piece_viewInfo">"Ver Info."</string>
    <string name="piece_Info">"Información"</string>
    <string name="piece_AutoAmount">"Calculo automático"</string>
    <string name="piece_units">Unidades</string>
    <string name="piece_selectBaseSize">Selecciona talla base</string>
    <string name="piece_setAmounMaterial">Añadir consumo</string>
    <string name="piece_move">Mover piezas</string>
    <string name="piece_noObservation">Añadir Observaciones</string>
    <string name="dealership_dealerships">Proveedores</string>
    <string name="contact_Name">Nombre</string>
    <string name="contact_Adress">Dirección</string>
    <string name="contact_Company">Empresa</string>
    <string name="contact_Phone">"Teléfono"</string>
    <string name="contact_Email">"Email"</string>
    <string name="contact_Added">"Contacto añadido"</string>
    <string name="warning_edit">Solo se puede editar uno.</string>
    <string name="warning_emptyName">Añade un nombre</string>
    <string name="warning_emptyMaterial">Sin piezas</string>
    <string name="warning_emptyCategory">Añade una categoria</string>
    <string name="warning_exist">Ya existe</string>
    <string name="warning_emptyPairCount">Añadir máximo de pares por nota</string>
    <string name="warning_duplicate_dealer">El contacto ya existe.\n¿Desea actualizar los datos? </string>
    <string name="warning_filledMaterial">No se puede eliminar.\n Asegurese de que el material no tiene piezas</string>
    <string name="warning_lastPiece">No se puede eliminar</string>
    <string name="warning_deleteCategory">No se puede eliminar.\n Esta categoria tiene asignaciones</string>
    <string name="observation">Observaciones</string>
    <string name="model_btn">Modelos</string>
    <string name="importText">Importar Modelos</string>
    <string name="importError">Error de importación</string>
    <string name="importNoAsigned_Cat">No Asignado</string>
    <string name="importRecent_Cat">Recientes</string>
    <string name="categoryHint">Categoria</string>
    <string name="noMaterial">No material</string>
    <string name="materialsTxt">Materiales</string>
    <string name="materialTxt">Material</string>
    <string name="addMaterial">Añadir material</string>
    <string name="addMateryalType">Añadir tipo</string>
    <string name="newMaterial">Nuevo material</string>
    <string name="ediMaterial">Editar material</string>
    <string name="material_Name">Artículo</string>
    <string name="material_type">Tipo</string>
    <string name="material_dealership">Proveedor</string>
    <string name="material_seasons">Temporada</string>
    <string name="material_stock">Stock</string>
    <string name="material_date">Fecha</string>
    <string name="material_selection">Selecciona un Material</string>
    <string name="cutNotesLists">Listados</string>
    <string name="cutNotesList">Listado</string>
    <string name="cutNotes_cutnote_generator"> Crear Notas</string>
    <string name="cutNote">Nota</string>
    <string name="cutNotes_AutomaticCutnoteList"> Listado Automático</string>
    <string name="cutNotes_MaxPairCount"> Máximo de Pares por Nota</string>
    <string name="cutNotes">Notas de Corte</string>
     <string name="cutNotes_status_in_progress">En curso</string>
    <string name="cutNotes_status_finished">Finalizada</string>
    <string name="cutNotes_status_indeterminated">Indeterminado</string>
    <string-array name="cutNotes_status">
        <item>@string/cutNotes_status_finished</item>
        <item>@string/cutNotes_status_in_progress</item>
        <item>@string/cutNotes_status_indeterminated</item>

    </string-array>
    <string name="cutNotes_addCutnote"> Añadir Nota</string>
    <string name="cutNotes_addCutnoteList">Añadir Listado</string>
    <string name="cutNotes_addAutomaticCutnoteList">Añadir Listado Automático</string>
    <string name="cutNotes_pairs">Pares</string>
    <string name="cutNotes_reference">Referencia</string>
    <string name="cutNote_number">Número de Nota</string>
    <string name="worker_worker">Trabajador</string>
    <string name="worker_workers">Trabajadores</string>
    <string name="units_feet">Pies</string>
    <string name="units_meter">Metros</string>
    <string name="units_decimeter">Decimetros</string>
    <string name="externalActivity">Externos</string>
    <string name="checkedSinleFileText">Archivo</string>
    <string name="checkedFileText">Archivos</string>
    <string name="modelosText">Modelos</string>
    <string name="nav_open">Abrir</string>
    <string name="nav_closed">Cerrar</string>
    <string name="action_piecesMaterial">Ver piezas</string>
    <string name="pieceAmountFormat"> %1$s - %2$d </string>
    <string-array name="default_DealersType">

        <item>No Asignado</item>
        <item>Tiras</item>

        <item>Tacones</item>

        <item>Pieles</item>
        <item>Hormas</item>
        <item>Patrones</item>

        <item>Troqueles</item>

    </string-array>
    <string-array name="default_complements">

        <item>Cinta Talón</item>

        <item>Cordoneras</item>

        <item>Contrafuerte</item>

        <item>Estabilizador</item>

        <item>Etiqueta Lengua</item>

        <item>Horma</item>

        <item>Logo Goma</item>

        <item>Pantín</item>


    </string-array>
    <string-array name="default_materialsType">

    <item>No Asignado</item>
    <item>Ante</item>
    <item>Charol</item>
    <item>Laminado</item>
    <item>Serraje</item>
    <item>Sintético</item>
    <item>Vacuno</item>
    </string-array>
</resources>