<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <group android:id="@+id/group_options">

            <item
                android:id="@+id/action_sort"
                android:enabled="true"
                android:icon="@drawable/ic_sort_black_24dp"
                android:orderInCategory="200"
                android:title="@string/action_sort"
                android:visible="true"
                app:showAsAction="ifRoom">

                <menu>
                    <group
                        android:id="@+id/materialSortType"
                        android:checkableBehavior="single"
                        android:menuCategory="container">
                        <item
                            android:id="@+id/action_sortName"
                            android:checked="true"
                            android:title="@string/action_sortAlphabetical" />
                        <item
                            android:id="@+id/action_sortType"
                            android:checked="false"
                            android:title="@string/action_sortType" />
                        <item
                            android:id="@+id/action_sortDate"
                            android:title="@string/action_sortDate" />
                        <item
                            android:id="@+id/action_sortDealer"
                            android:checked="false"
                            android:title="@string/action_sortDealer" />
                        <item
                            android:id="@+id/action_sortSeasons"
                            android:checked="false"
                            android:title="@string/action_sortSeasons" />

                    </group>
                </menu>

            </item>


            <item
                android:id="@+id/action_search"
                android:enabled="true"
                android:icon="@drawable/ic_search_black_24dp"
                android:orderInCategory="300"
                android:title="@string/action_search"
                android:visible="true"
                app:searchIcon="@drawable/ic_search_white_24dp"
                app:showAsAction="ifRoom" />

        </group>

    </menu>