<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/action_category"
            android:enabled="true"
            android:icon="@drawable/ic_folder_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_directory"

            android:visible="true"
            app:showAsAction="ifRoom" />

        <item
            android:enabled="true"
            android:id="@+id/action_searchBar"
            android:icon="@drawable/ic_search_white_24dp"
            android:orderInCategory="300"
            android:title="@string/action_search"
            android:visible="true"
            app:searchIcon="@drawable/ic_search_white_24dp"
            app:showAsAction="ifRoom" />



    <item
        android:enabled="true"
        android:id="@+id/action_short"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_sort"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:checkableBehavior="single"
                android:menuCategory="container"
                android:id="@+id/materialSortType">
                <item
                    android:id="@+id/action_sortExternal"
                    android:enabled="true"

                    android:orderInCategory="100"
                    android:title="@string/externalActivity"
                    android:visible="true">

                </item>

                <item
                android:id="@+id/action_sortType"
                android:enabled="true"

                android:orderInCategory="200"
                android:title="@string/action_sortType"
                android:visible="true">

            </item>



                <item
                    android:id="@+id/action_sortModel"
                    android:enabled="true"

                    android:orderInCategory="300"
                    android:title="@string/modelosText"
                    android:visible="true">

                </item>
                <item
                    android:id="@+id/action_sortAll"
                    android:enabled="true"

                    android:orderInCategory="400"
                    android:title="@string/action_sortAll"
                    android:visible="true">

                </item>
            </group>
        </menu>

    </item>

    <item

        android:id="@+id/action_viewBar"
        android:icon="@drawable/ic_list_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_viewMode"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>