<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.colorbuzztechgmail.spf.MainActivity" >

<group
    android:id="@+id/group_options">


    <item
        android:id="@+id/action_title"
        android:icon="@drawable/ic_unfold_white_selector"
        android:orderInCategory="300"
        android:title="@string/action_collapse_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:enabled="true"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_sort"
        android:visible="true"
        app:showAsAction="never|ifRoom">

        <menu>
            <group
                android:id="@+id/materialSortType"
                android:checkableBehavior="single"
                android:menuCategory="container">

                <item
                    android:id="@+id/action_sortState"
                    android:checked="false"
                    android:orderInCategory="100"
                    android:title="@string/action_sortState" />
                <item
                    android:id="@+id/action_sortPosition"
                    android:checked="false"
                    android:orderInCategory="200"
                    android:title="@string/action_sortPosition" />

                <item
                    android:id="@+id/action_sortSize"
                    android:checked="true"
                    android:title="@string/action_sortSize" />

            </group>
        </menu>

    </item>
    <item
        android:id="@+id/action_searchBar"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_search"
        android:visible="true"
        app:searchIcon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />




</group>

</menu>
