<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.colorbuzztechgmail.spf.MainActivity" >

<group
    android:id="@+id/group_options">


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:orderInCategory="500"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:enabled="true"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="200"
        android:title="@string/cutNotes_status"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="300"
        android:title="@string/action_search"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_custumer"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_custumers"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:orderInCategory="100"
        android:title="@string/importRecent_Cat"
        android:visible="true"
        app:showAsAction="ifRoom" />


</group>

</menu>
