<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.colorbuzztechgmail.spf.ModelActivity">


    <item
        android:id="@+id/action_save"
        android:enabled="true"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:visible="true"
        app:showAsAction="ifRoom">

        <menu>


            <item
                android:id="@+id/action_save_as"
                android:enabled="true"
                android:icon="@drawable/ic_save_black_24dp"
                android:title="@string/action_save_as"
                android:visible="true" />
            <item
                android:id="@+id/action_print"
                android:icon="@drawable/ic_print_black_24dp"
                android:title="@string/action_print" />
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/action_send" />
        </menu>

    </item>


</menu>
